update for order/trade detail
